 <resources>
    <string name="app_name">Thinkr</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is not valid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="approve_assignment">Approve Assignment</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="prompt_email">Email</string>
    <string name="validate_password">Re-type password</string>

    <string-array name="user_types_array">
        <item>Student</item>
        <item>Teacher</item>
        <item>Parent</item>
    </string-array>
    <string name="title_activity_student">Student</string>
    <string name="InvalidUserType">Invalid User Type</string>
    <string name="title_activity_parent">Parent</string>
    <string name="title_activity_admin">Administrator</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_teacher">TeacherActivity</string>
    <string name="action_completed">Assignment Completed!</string>
    <string name="action_not_completed">Assignment not completed!</string>
    <string name="web_socket_info">web socket information</string>
    <string name="action_signout">sign out</string>
</resources>
