<layout>
    <data>

        <variable
            name="none"
            type="String" />

    </data>
    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.android.thinkr.fragments.CommFragment">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context=".fragments.SignupFragment"
            tools:showIn="@layout/activity_signup">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/web_socket_comm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/web_socket_info"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/approve_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_completed" />

            <Button
                android:id="@+id/reject_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_not_completed" />


        </LinearLayout>

    </FrameLayout>
</layout>

